Add Postbuild Events
Add postbuild event to copy library to dev folder!

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 libraries/Assembly-CSharp*.dll
 libraries/UnityEngine*.dll
 
+# External Tools
+resources/ILSpy
+resources/kParser
+resources/Spriter
+resources/uTiny
+data/ripped
 
 # User-specific files
 *.suo
