Add StorageCompressor Class
StorageCompressor class is clone of StorageLocker class

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # ONI & Unity Engine Libraries
 libraries/Assembly-CSharp*.dll
 libraries/UnityEngine*.dll
+libraries/assembly-src
+Assembly/*
 
 # External Tools
 resources/ILSpy
